fix input label was too long

--- a/TeleHealth_files/responsive.css
+++ b/TeleHealth_files/responsive.css
@@ -297,7 +297,7 @@
         width: 100%;
         height: 160px;
         position: absolute;
-        top: 230%;
+        top: 240%;
         left: 0;
         padding: 8px;
         display: flex;
